# azure_web_app

./: .gitignore  entrypoint.sh  main.py  pyproject.toml  requirements.txt  seed.py
.github/workflows/: main_wepapp.yml
fuctionApp/: function_app.py
