[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
